--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^0.21.4",
     "next": "11.1.2",
+    "nodemailer": "^6.6.3",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "sass": "^1.41.1"
+    "sass": "^1.41.1",
+    "sweetalert2": "^11.1.6"
   },
   "devDependencies": {
     "@types/node": "^16.9.2",
