--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "devDependencies": {
     "@types/node": "^16.9.2",
+    "@types/nodemailer": "^6.4.4",
     "@types/react": "^17.0.21",
     "eslint": "7.32.0",
     "eslint-config-next": "11.1.2",
